--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <h1>Add a Restaurant</h1>
-  <form action="/tasks" method="post">
-    <input type="text">
-  </form>
+  <h1>Add a Task</h1>
+
   <%= render 'tasks/form' %>
+  </form>
 </div>
