--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,5 @@
-<% if @task.errors.any? %>
- <ul>
-    <% @task.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<h1>EDIT TASK</h1>
+
 
 <%= form_for(@task) do |f| %>
   <div class="form-group">
