--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,16 @@
-<h1><%= @task.title %></h1>
-<h2><%= @task.details %></h2>
-<p><%= @task.completed %></p>
-<p><%= link_to "Back", tasks_path %></p>
+<div class="container">
+
+<h3>Task: <%= @task.title %></h3>
+<p>Details: <%= @task.details %></p>
+<p>Task Completed?</p>
+<input class="form-group" type="checkbox" name="completed"
+         <% if @task.completed == true %>
+          checked
+         <% else %>
+          unchecked
+         <% end %>>
+
+<p><%= link_to "Delete", "/tasks/#{@task.id}", method: :delete, data: { confirm: "Do you want to delete #{@task.title}"}, class: "btn btn-danger" %></p>
+<p><%= link_to "Back", tasks_path, class: "btn btn-caution" %></p>
+<p><%= link_to "Edit", edit_task_path(@task), class: "btn btn-info" %></p>
+</div>
