--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,23 +1,20 @@
 <div class="container">
-
-<h1 class="border m-2">Task list</h1>
-
-<div class="contents border p-5">
-<% @tasks.each do |task| %>
-  <ul>
-    <li> <input type="checkbox" name="completed"
-         <% if task.completed == true %>
-          checked
-         <% else %>
-          unchecked
-         <% end %>>
-        <%= link_to task.title, task_path(task), class:"btn" %>
-        <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Do you want to delete #{task.title}" }, class: "btn btn-danger m-2 p-1"%>
-    </li>
-  </ul>
-<% end %>
-<div>
-
-<%= link_to "Create new task", new_task_path, class: "btn btn-primary m-4" %>
-
-</div>
+  <h1 class="">Task list</h1>
+  <div class="contents border p-5">
+    <% @tasks.each do |task| %>
+      <ul>
+        <li>
+          <% if task.completed %>
+            <%# <i class="fa fas fa-square-check"></i> %>
+            <i class="fa fas fa-check-square"></i>
+          <% else %>
+            <i class="fa fa-solid fa-square"></i>
+          <% end %>
+          <%= link_to task.title, task_path(task), class:"btn" %>
+          <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Do you want to delete #{task.title}" }, class: "btn btn-danger m-2 p-1"%>
+        </li>
+      </ul>
+    <% end %>
+    <div>
+      <%= link_to "Create new task", new_task_path, class: "btn btn-primary m-4" %>
+    </div>
